testsuite/tests/typing-modules-bugs/pr6752_bad.compilers.reference
File "pr6752_bad.ml", line 26, characters 31-40:
26 | let q' : Common0.msg Queue.t = Common0.q
                                    ^^^^^^^^^
Error: This expression has type 'a Queue.t
       but an expression was expected of type Common0.msg Queue.t
       The type constructor Common0.msg would escape its scope
